# List all the files here in the alphabetical order
set(PAGE_02_CXX
  task051.cpp
  task052.cpp
  task053.cpp
  task054.cpp
  task055.cpp
  task056.cpp
  task057.cpp
  task058.cpp
  task059.cpp
  task060.cpp
  task061.cpp
  task062.cpp
  task063.cpp
  task064.cpp
  task065.cpp
  task066.cpp
  task067.cpp
  task068.cpp
  task069.cpp
  task070.cpp
  task071.cpp
  task072.cpp
  task073.cpp
  task074.cpp
  task075.cpp
  task076.cpp
  task077.cpp
  task078.cpp
  task079.cpp
  task080.cpp
  task081.cpp
  task082.cpp
  task083.cpp
  task084.cpp
  task085.cpp
  task086.cpp
  task087.cpp
  task088.cpp
  task089.cpp
  task090.cpp
  task091.cpp
  task092.cpp
  task093.cpp
  task094.cpp
  task095.cpp
  task096.cpp
  task097.cpp
  task098.cpp
  task099.cpp
  task100.cpp
)

add_library(page_02 ${PAGE_02_CXX})
target_link_libraries(page_02 base gtest ${LIBGMPXX_LIBRARIES} eigen)
